删除无用信息

--- a/第一章笔记.md
+++ b/第一章笔记.md
@@ -10,3 +10,19 @@
 
 算法 $\neq$ 程序
 
+好的算法是既要马儿跑又要马儿少吃草
+
+度量
+======
+## 理想、统一、分层次的尺度
+* 正确性
+* 运行时间+所需存储空间
+
+$T_A(P)=$用算法A求解某一问题规模为n的实例，所需计算成本讨论特定算法A（及其相对应的问题）时，简记$T(n)$
+
+$T(n)= max\{T(P) \ | \ |P|=n\}$ \
+在规模同为n的所有实例中只关注最坏（成本最高）者
+
+
+
+## 运用该尺度测量DSA的性能
